# ccpool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml  linux.yml  macos.yml  release.yml
.omc/state/: last-tool-error.json
ccpool/: __init__.py  blocks.py  caam.py  cli.py  config.py  doctor.py  identity.py  migrate.py  notify.py  paths.py  pick.py  platform.py  providers.py  secrets.py  shell.py  status.py  statusline.py  usage.py  watchdog.py  watcher.py
cmaxctl/: __init__.py  blocks.py  caam.py  cli.py  config.py  doctor.py  identity.py  migrate.py  notify.py  paths.py  pick.py  platform.py  providers.py  secrets.py  shell.py  status.py  statusline.py  usage.py  watchdog.py  watcher.py
docs/: ARCHITECTURE.md  COMPATIBILITY.md  INSTALL.md  PROVIDERS.md  REFERENCE.md  THREAT_MODEL.md  TROUBLESHOOTING.md  integrations.md
docs/ADRs/: 0001-package-name.md  0002-license-mit.md  0003-stdlib-only-python.md  0004-no-resident-daemon.md  0005-keychain-then-env-fallback.md  0006-caam-as-runtime-dep.md  0007-oauth-usage-undocumented-endpoint.md  0008-token-storage-encryption-stance.md  0009-telemetry-opt-in.md  0010-no-mid-turn-rotation.md
docs/captures/: README.md  setup.tape  statusline.tape  usage.tape
docs/captures/_demo-env/: ccpool
install/: install.sh
install/homebrew/: README.md  ccpool.rb  cmaxctl.rb
install/linux/: Dockerfile.test  README.md  run-tests-in-docker.sh
install/linux/arch/: PKGBUILD
install/linux/debian/: changelog  control  copyright  (+1 more)
tests/: conftest.py
tests/e2e/: test_first_run.bats
tests/integration/: test_disable_enable.bats  test_dispatcher.bats  test_doctor_fix.bats  test_helper.bash  test_linux_keyring.py  test_no_binary_degraded.py  test_rotate.bats  test_status_render.bats  test_subcommand_passthrough.bats
tests/unit/: test_config.py  test_identity.py  test_migrate_detect.py  test_paths.py  test_platform.py  test_providers.py  test_secrets_env.py  test_shell.py  test_statusline.py
