[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccpool"
dynamic = ["version"]
description = "Smart Claude Max account rotation. Zero daemons. Zero lock-in."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ccpool contributors" }]
keywords = ["claude", "anthropic", "oauth", "account-rotation", "claude-code"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.urls]
Homepage      = "https://github.com/torkay/ccpool"
Documentation = "https://github.com/torkay/ccpool#readme"
Issues        = "https://github.com/torkay/ccpool/issues"
Changelog     = "https://github.com/torkay/ccpool/blob/main/CHANGELOG.md"

[project.scripts]
ccpool = "ccpool.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.0",
]

[tool.setuptools.dynamic]
version = { attr = "ccpool._version.__version__" }

[tool.setuptools.packages.find]
include = ["ccpool*"]

[tool.setuptools.package-data]
ccpool = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
